--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
         <activity android:name=".activites.OrderActivity"/>
         <service android:name="com.parse.PushService" />
-        <receiver android:name=".receivers.CustomPushParseReceiver"
+        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
