--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
       IMPORTANT: Change "com.parse.starter.permission.C2D_MESSAGE" in the lines below
       to match your app's package name + ".permission.C2D_MESSAGE".
     -->
-    <permission android:protectionLevel="signature"
-        android:name="com.byteshaft.order_booker.permission.C2D_MESSAGE" />
+    <permission
+        android:name="com.byteshaft.order_booker.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="com.byteshaft.order_booker.permission.C2D_MESSAGE" />
 
     <application
@@ -33,13 +35,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activites.MainActivity"/>
-        <activity android:name=".activites.OrderActivity"/>
-        <activity android:name=".activites.ProductsActivity"/>
+        <activity android:name=".activites.MainActivity" />
+        <activity android:name=".activites.OrderActivity" />
+        <activity android:name=".activites.ProductsActivity" />
+
         <service android:name="com.parse.PushService" />
-        <!--com.parse.ParsePushBroadcastReceiver for default notification-->
-        <receiver android:name="com.parse.ParsePushBroadcastReceiver"
-            android:exported="false">
+        <!-- com.parse.ParsePushBroadcastReceiver for default notification -->
+        <receiver
+            android:name="com.parse.ParsePushBroadcastReceiver"
+            android:exported="false" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.USER_PRESENT" />
@@ -48,19 +52,24 @@
                 <action android:name="com.parse.push.intent.OPEN" />
             </intent-filter>
         </receiver>
-        <receiver android:name="com.parse.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND">
+        <receiver
+            android:name="com.parse.GcmBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <!--
-                  IMPORTANT: Change "com.parse.starter" to match your app's package name.
-                -->
+<!--                   IMPORTANT: Change "com.parse.starter" to match your app's package name. -->
                 <category android:name="com.byteshaft.order_booker" />
             </intent-filter>
         </receiver>
-        <meta-data android:name="com.parse.push.notification_icon" android:resource="@drawable/notification"/>
+
+        <meta-data
+            android:name="com.parse.push.notification_icon"
+            android:resource="@drawable/notification" />
+
+        <activity android:name=".activites.ProductsDetailActivity" >
+        </activity>
     </application>
 
 </manifest>
