--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         <activity android:name=".activites.MainActivity" />
         <activity android:name=".activites.OrderActivity" />
         <activity android:name=".activites.ProductsActivity" />
-
+        <activity android:name=".activites.CartActivity"/>
         <service android:name="com.parse.PushService" />
         <!-- com.parse.ParsePushBroadcastReceiver for default notification -->
         <receiver
