--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        byteshaft {
+            keyAlias 'byteshaft'
+            keyPassword 'shaftsixtyfour'
+            storeFile file('/home/s9iper1/Downloads/byteshaft-store-key.jks')
+            storePassword 'shaftsixtyfour'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
         applicationId "com.byteshaft.order_booker"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "1.2.1"
     }
     buildTypes {
         release {
